@startuml

title __INITIALIZER's Class Diagram__\n

  namespace  {
    namespace ompany18.mctank {
      namespace initializer {
        class company18.mctank.initializer.CustomerDataInitializer {
            {static} - LOG : Logger
            - userAccountManager : UserAccountManager
            + initialize()
        }
      }
    }
  }
  

  namespace  {
    namespace ompany18.mctank {
      namespace initializer {
        class company18.mctank.initializer.InventoryDataInitializer {
            {static} - LOG : Logger
            - inventoryRepository : UniqueInventory<UniqueInventoryItem>
            + InventoryDataInitializer()
            + initialize()
        }
      }
    }
  }
  

  namespace  {
    namespace ompany18.mctank {
      namespace initializer {
        class company18.mctank.initializer.ItemsInitializer {
            + ItemsInitializer()
            + initialize()
        }
      }
    }
  }
  

  namespace  {
    namespace ompany18.mctank {
      namespace initializer {
        class company18.mctank.initializer.OrdersDataInitializer {
            {static} - LOG : Logger
            + initialize()
        }
      }
    }
  }
  

  namespace  {
    namespace ompany18.mctank {
      namespace initializer {
        class company18.mctank.initializer.ReservationDataInitializer {
            {static} - LOG : Logger
            + ReservationDataInitializer()
            + initialize()
        }
      }
    }
  }
  

  company18.mctank.initializer.CustomerDataInitializer .up.|> org.salespointframework.core.DataInitializer
  company18.mctank.initializer.CustomerDataInitializer o-- company18.mctank.repository.CustomerRepository : customerRepository
  company18.mctank.initializer.CustomerDataInitializer o-- company18.mctank.service.CustomerService : customerService
  company18.mctank.initializer.InventoryDataInitializer .up.|> org.salespointframework.core.DataInitializer
  company18.mctank.initializer.InventoryDataInitializer o-- company18.mctank.service.GasPumpService : gasPumpService
  company18.mctank.initializer.InventoryDataInitializer o-- company18.mctank.repository.ItemsRepository : itemsRepository
  company18.mctank.initializer.ItemsInitializer .up.|> org.salespointframework.core.DataInitializer
  company18.mctank.initializer.ItemsInitializer o-- company18.mctank.repository.ItemsRepository : itemsRepository
  company18.mctank.initializer.OrdersDataInitializer .up.|> org.salespointframework.core.DataInitializer
  company18.mctank.initializer.OrdersDataInitializer o-- company18.mctank.service.CartService : cartService
  company18.mctank.initializer.OrdersDataInitializer o-- company18.mctank.service.CustomerService : customerService
  company18.mctank.initializer.OrdersDataInitializer o-- company18.mctank.repository.ItemsRepository : itemsRepository
  company18.mctank.initializer.ReservationDataInitializer .up.|> org.salespointframework.core.DataInitializer
  company18.mctank.initializer.ReservationDataInitializer o-- company18.mctank.service.ReservationService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
